Wed May  5 07:27:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_mark_method_entry): renamed.

Wed May  5 05:20:27 2010  Koichi Sasada  <ko1@atdot.net>

	* method.h, vm_method.c: rename some internal functions related to
	  rb_method_entry_t.
	  rb_add_method_me()        -> rb_method_entry_set().
	  rb_get_method_entry()     -> rb_method_entry_without_cache().
	  rb_gc_mark_method_entry() -> rb_mark_method_entry().

	* class.c, proc.c: ditto.

Tue May  4 22:59:48 2010  wanabe  <s.wanabe@gmail.com>

	* compile.c (iseq_build_body): update iseq->ic_size.
	  a patch from Tomoyuki Chikanaga. see #3236.

Tue May  4 18:51:22 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (name_err_mesg_to_str): preserve encoding of inspection.
	  [ruby-core:29948]

Tue May  4 18:38:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (test_copy_stream):
	  IO.copy_stream support binmode only currently.
	  [ruby-core:23724]

Tue May  4 12:46:09 2010  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (argument_error): push correct backtrace.
	  Bug #2281 [ruby-core:26333]

Tue May  4 12:38:40 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/option.c (sockopt_inspect): use rb_str_cat2 and
	  rb_str_append.

	* ext/socket/ancdata.c (ancillary_inspect): refined.

Tue May  4 11:48:06 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_inspect): use rb_str_cat2 and
	  rb_str_append.

Tue May  4 07:52:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/net/http.rb (Net::HTTPResponse#read_chunked): ensure to skip the
	  last newline of chunk.  [ruby-core:29229]

	* test/net/http/utils.rb: add an option for chunked response test.

	* test/net/http/test_http.rb: add tests for chunked response.

Tue May  4 03:37:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: Update nkf 2010-04-28.

Mon May  3 21:08:16 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* sample/README: update file list. [ruby-core:28981]
